--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block main %}
-    <h4 class="card-title">Available Riddles</h4>
+    <h4 class="card-title">Простые тесты Python</h4>
     {% if message %}
         <p class="alert alert-success">
             <strong>{{ message }}</strong>
