--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,14 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-8">
-            <h1 class="mt-2">Riddles</h1>
+            <h1 class="mt-2">Проверь себя</h1>
             {% if user.is_authenticated %}
                 <p class="text-right">
                     Hello, {{ user.username }}!
                     <a href="/riddles/logout">Log out</a> |
                     <a href="/riddles/password-change">Change password</a>
                     {% if user.is_staff %}
-                        | <a href="/riddles/admin">Admin panel</a>
+                        | <a class="btn btn-danger" href="/riddles/admin">Admin panel</a>
                     {% endif %}
                 </p>
             {% else %}
@@ -37,6 +37,7 @@ href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
             </div>
         </div>
     </div>
+
 </div>
 </body>
 </html>
