--- a/templates/base.html
+++ b/templates/base.html
@@ -1,21 +1,31 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport"
-        content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet"
-href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+	<link type="text/css" href="{% static 'riddles/css/styles.css' %}" rel="stylesheet" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+	<link rel="shortcut icon" href="{% static 'riddles/images/main.ico' %}" type="image/x-icon"/>
     <title>Riddles</title>
 </head>
 <body>
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-8">
-            <h1 class="mt-2">Проверь себя</h1>
+        <div class="col-12">
+            <div class="header">
+                <ul id="mainmenu" class="mainmenu"><a>Проверь себя</a>
+
+			<li class="logo"><a href="{% url "index" %}"><div class="logo"></div></a></li>
+            </ul>
+            </div>
+
+{#            <h1 class="mt-2">Проверь себя</h1>#}
+
             {% if user.is_authenticated %}
                 <p class="text-right">
-                    Hello, {{ user.username }}!
+                                    {#  Hello, {{ user.username }}!#}
                     <a href="/riddles/logout">Log out</a> |
                     <a href="/riddles/password-change">Change password</a>
                     {% if user.is_staff %}
